nobase_include_HEADERS = hkl.h hkl/hkl-axis.h hkl/hkl-matrix.h \
	hkl/hkl-pseudoaxis-e4cv.h hkl/hkl-source.h \
	hkl/hkl-detector.h hkl/hkl-parameter.h hkl/hkl-pseudoaxis-e6c.h hkl/hkl-unit.h \
	hkl/hkl-geometry-factory.h hkl/hkl-pseudoaxis-auto.h \
	hkl/hkl-pseudoaxis-factory.h  hkl/hkl-vector.h \
	hkl/hkl-geometry.h hkl/hkl-pseudoaxis-common-eulerians.h hkl/hkl-pseudoaxis.h \
	hkl/hkl-interval.h hkl/hkl-pseudoaxis-common.h hkl/hkl-pseudoaxis-k4cv.h \
	hkl/hkl-lattice.h hkl/hkl-pseudoaxis-common-hkl.h hkl/hkl-pseudoaxis-k6c.h \
	hkl/hkl-list.h hkl/hkl-pseudoaxis-common-psi.h hkl/hkl-quaternion.h \
	hkl/hkl-macros.h hkl/hkl-pseudoaxis-common-q.h hkl/hkl-sample.h
