.pov.png:
	povray +P +H600 +W800 $<

dist_pkgdata_DATA = \
	3S+1D_pov.png \
	B_b3_y.png \
	B_a.png \
	B_b.png \
	cristal.png \
	4S+2D_pov.png \
	4S+2D_reciproque_pov.png \
	4S+2D_reciproque2_pov.png \
	4S+2D_reciproque3_pov.png \
	4S+2D_reciproque4_pov.png \
	test.png

EXTRA_DIST = \
	3S+1D_pov.pov \
	B_b3_y.pov \
	B_a.pov \
	B_b.pov \
	cristal.pov \
	4S+2D_pov.pov \
	4S+2D_reciproque_pov.pov \
	4S+2D_reciproque2_pov.pov \
	4S+2D_reciproque3_pov.pov \
	4S+2D_reciproque4_pov.pov \
	test.pov \
	arrows.inc \
	bravais.inc \
	cristal.ini