EXTRA_DIST = \
	source/conf.py.in \
	source/development.rst \
	source/diffractometers/e4cv.rst \
	source/diffractometers/mars.rst \
	source/diffractometers/k4cv.rst \
	source/diffractometers/e6c.rst \
	source/diffractometers/k6c.rst \
	source/diffractometers/zaxis.rst \
	source/diffractometers/med2_2.rst \
	source/index.rst \
	source/introduction.rst \
	source/pseudo.rst

-include $(top_srcdir)/sphinx.make
