name:                hkl

-- The package version.  See the Haskell package versioning policy (PVP)
-- for standards guiding when and how versions should be incremented.
-- http://www.haskell.org/haskellwiki/Package_versioning_policy
-- PVP summary:      +-+------- breaking API changes
--                   | | +----- non-breaking API additions
--                   | | | +--- code changes with no API change
version:             0.1.0.0
license:             GPL-3
license-file:        LICENSE
author:              Picca Frédéric-Emmanuel
maintainer:          picca@debian.org
copyright:           Synchrotron SOLEIL
build-type:          Simple
cabal-version:       >= 1.10

executable ghkl
  main-is:             src/ghkl.hs
  build-depends:       attoparsec
                     , base >= 4.6 && < 4.9
                     , bindings-hdf5 >= 1.8.12
                     , containers >= 0.5 && < 0.6
                     , dimensional >= 0.10
                     , filepath >= 1.3.0
                     , Glob >= 0.7.5
                     , hkl
                     , hmatrix >= 0.15
                     , monad-loops >= 0.4.2
                     , pipes >= 4.1.2
                     , text
                     , transformers >= 0.3
                     , vector >= 0.10.0.1
  default-language:    Haskell2010
  pkgconfig-depends:   hkl
  build-tools:         hsc2hs
  -- ghc-options:         -Wall -Werror
  -- ghc-options:
  --   -O2
  --   -threaded
  --   -fprof-auto
  --   "-with-rtsopts=-N -p -s -h -i0.1"

executable hkl3d
  main-is:             src/hkl3d.hs
  build-depends:       base >= 4.6 && < 4.9
                     , bindings-hdf5 >= 1.8.12
                     , containers >= 0.5 && < 0.6
                     , dimensional >= 0.10
                     , filepath >= 1.3.0
                     , hkl
                     , hmatrix >= 0.15
                     , monad-loops >= 0.4.2
                     , pipes >= 4.1.2
                     , text
                     , transformers >= 0.3
                     , vector >= 0.10.0.1
  default-language:    Haskell2010
  pkgconfig-depends:   hkl
  build-tools:         hsc2hs
  -- ghc-options:         -Wall -Werror

library
   exposed-modules:    Hkl
                     , Hkl.C
                     , Hkl.Calibration
                     , Hkl.Diffabs
                     , Hkl.Diffabs.Martinetto
                     , Hkl.Engine
                     , Hkl.H5
                     , Hkl.PyFAI  
                     , Hkl.Sixs
                     , Hkl.Types
                     , Hkl.Types.Parameter
                     , Hkl.Types.PyFAI
  other-extensions:    CPP
                     , ForeignFunctionInterface
                     , EmptyDataDecls
                     , TypeFamilies
                     , FlexibleInstances
                     , FlexibleContexts
                     , RecordWildCards
  build-depends:       attoparsec
                     , base >= 4.6 && < 4.9
                     , bindings-hdf5 >= 1.8.12
                     , bytestring >= 0.10.0.2
                     , containers >= 0.5 && < 0.6
                     , dimensional >= 0.10
                     , directory >= 1.2.0
                     , filepath >= 1.3.0
                     , Glob >= 0.7.5
                     , hdf5
                     , hmatrix >= 0.15
                     , monad-loops >= 0.4.2
                     , pipes >= 4.1.2
                     , text
                     , transformers >= 0.3
                     , vector >= 0.10.0.1
  hs-source-dirs:      src
  build-tools:         hsc2hs
  default-language:    Haskell2010
  pkgconfig-depends:   hkl
  -- ghc-options:         -Wall -Werror
