AM_CFLAGS=-I$(top_srcdir)

noinst_LTLIBRARIES=libccan.la
libccan_la_SOURCES = \
	list/list.h \
	list/list.c \
	noerr/noerr.c \
	noerr/noerr.h \
	ptr_valid/ptr_valid.c \
	ptr_valid/ptr_valid.h \
	check_type/check_type.h \
	compiler/compiler.h \
	autodata/autodata.c \
	autodata/autodata.h \
	container_of/container_of.h \
	array_size/array_size.h \
	darray/darray.h \
	build_assert/build_assert.h

ccanincludedir=$(includedir)/hkl/ccan
nobase_ccaninclude_HEADERS= \
	list/list.h \
	check_type/check_type.h \
	container_of/container_of.h \
	darray/darray.h \
	build_assert/build_assert.h
